Text and tittle

--- a/src/app/Components/yaml-regex/yaml-regex.component.html
+++ b/src/app/Components/yaml-regex/yaml-regex.component.html
@@ -1,10 +1,10 @@
 <mat-toolbar>
   <img src="../../../assets/GreenRexPeas.png" height="80px" style="margin-left:37% ;">
-  <div class="tittle" style="font-size: 40px;">REX</div>
+  <div class="tittle" style="font-size: 40px;">REx</div>
 </mat-toolbar>
 
 <div class="intro-text">
-<p> REX is a colaborative list of regular expresions that can be used to bypass certain security restrictions.</p><br>
+<p> REX is a colaborative list of particular regular expresions of tokens and keys that can be used in different web services, above all APIs.</p><br>
 
 
 <p>REX is a project created by Jaime Polop, in colaboration with <a href="https://github.com/carlospolop/PEASS-ng" style="color: rgb(1, 173, 1);">PEASS-ng</a>, where everyone can contribute with additional regular expresions.</p>
