--- a/src/app/Components/yaml-regex/yaml-regex.component.html
+++ b/src/app/Components/yaml-regex/yaml-regex.component.html
@@ -7,7 +7,7 @@
 <p> REX is a colaborative list of particular regular expresions of tokens and keys that can be used in different web services, above all APIs.</p><br>
 
 
-<p>REX is a project created by Jaime Polop, in colaboration with <a href="https://github.com/carlospolop/PEASS-ng" style="color: rgb(1, 173, 1);">PEASS-ng</a>, where everyone can contribute with additional regular expresions.</p>
+<p>REX is a project created by <a href="https://github.com/JaimePolop" style="color: rgb(1, 173, 1);">Jaime Polop</a>, in colaboration with <a href="https://github.com/carlospolop/PEASS-ng" style="color: rgb(1, 173, 1);">PEASS-ng</a>, where everyone can contribute with additional regular expresions.</p>
 </div>
 <!-- <div class="tab">
  <li [value]="path" *ngFor="let path of paths">{{path}}</li>
