--- a/REx/src/app/Components/yaml-regex/yaml-regex.component.css
+++ b/REx/src/app/Components/yaml-regex/yaml-regex.component.css
@@ -1,11 +1,3 @@
-/* @import '~@swimlane/ngx-datatable/index.css';
-@import '~@swimlane/ngx-datatable/themes/bootstrap.scss';
-@import '~@swimlane/ngx-datatable/themes/material.scss';
-@import '~@swimlane/ngx-datatable/themes/dark.scss';
-@import '~@swimlane/ngx-datatable/assets/icons.css'; */
-
-
-
 
 .mat-toolbar{
     color: white;
@@ -23,12 +15,27 @@
     color: greenyellow;
 }
 
+.content{
+    background-color: rgb(2, 69, 0);
+}
+
+.github-corner:hover{
+    fill: #fff;
+    color: #151513;
+}
+
+.logo-text{
+    padding-top: 10px;
+    display: flex;
+    margin-right: 23%;
+}
+
 .intro-text{
     text-align: justify; 
-    margin-top: 50px; 
+    margin-left: 6%;
     font-family: sans, sans-serif;
-    margin-bottom: 50px;
-    margin-left: 23%;
+    padding-top: 70px;
+    font-size: medium;
 }
 
 .botones_tipo_regex{
@@ -50,12 +57,14 @@
   
 .botones_tipo_regex:focus {
     outline: none;
+    background: #59b800;
+    color: #e7ffd3;
     border: 2px solid #59b800;
   }
 
 .div_botones_tipo_regex{
     margin-left: 30%;
-    margin-top: 30px;
+    margin-top: 0px;
     margin-bottom: 30px;
     align-items: center;
 }
@@ -84,5 +93,5 @@
 .div_tabla{
     margin-left: 0%;
     padding-left: 5%;
-    margin-bottom: 30px;
+    padding-bottom: 30px;
 }
