--- a/REx/src/app/Components/yaml-regex/yaml-regex.component.html
+++ b/REx/src/app/Components/yaml-regex/yaml-regex.component.html
@@ -1,6 +1,6 @@
 <mat-toolbar>
-  <img src="assets/GreenRexPeas.png" height="80px" style="margin-left:37% ;">
-  <div class="tittle" style="font-size: 40px;">REx</div>
+  <img src="assets/GreenRexPeas.png" height="80px" style="margin-left:35% ;">
+  <div class="tittle" style="font-size: 40px;">RExpository</div>
 </mat-toolbar>
 
 <div class="content">
@@ -16,9 +16,9 @@
   <div class="logo-text">
     <img src="assets/GreenRexPeass-readme.png" height="350px" style="margin-left:4%; margin-top:2%;">
     <div class="intro-text">
-      <p style="color: #fff;"> Welcome <a href="https://github.com/JaimePolop/REx" style="color: #00e100;">REx</a>, a collection of regular expressions, also known as regex, a sequence of characters that define a search pattern. They allow you to search for and manipulate text with precision and speed. </p><br>
-      <p style="color: #fff;"> REx contains a wide variety of regular expressions, organized by category, to help you find the perfect expression. These regular expressions can be used in a variety of APIs or applications. </p><br>
-      <p style="color: #fff;"> REx is a project created by <a href="https://github.com/JaimePolop" style="color:  #00e100;">Jaime Polop</a>, in colaboration with <a href="https://github.com/carlospolop/PEASS-ng" style="color:#00e100;">PEASS-ng</a>, where everyone can contribute with additional regular expresions. We regularly update our repository with new regular expressions and updates to existing ones, so be sure to check back often for the latest additions!! </p>
+      <p style="color: #fff;"> Welcome <a href="https://github.com/JaimePolop/REx" style="color: #00e100;">RExpository</a>, a collection of regular expressions, also known as regex, a sequence of characters that define a search pattern. They allow you to search for and manipulate text with precision and speed. </p><br>
+      <p style="color: #fff;"> RExpository contains a wide variety of regular expressions, organized by category, to help you find the perfect expression. These regular expressions can be used in a variety of APIs or applications. </p><br>
+      <p style="color: #fff;"> RExpository is a project created by <a href="https://github.com/JaimePolop" style="color:  #00e100;">Jaime Polop</a>, in colaboration with <a href="https://github.com/carlospolop/PEASS-ng" style="color:#00e100;">PEASS-ng</a>, where everyone can contribute with additional regular expresions. We regularly update our repository with new regular expressions and updates to existing ones, so be sure to check back often for the latest additions!! </p>
     </div>
   </div>
   <!-- <div class="tab">
